# flutter_lame

android/: .gitignore  build.gradle
src/: CMakeLists.txt
src/lame/: CMakeLists.txt  HACKING  INSTALL  LICENSE  Makefile.MSVC  Makefile.am  Makefile.am.global  Makefile.in  Makefile.unix  README  README.WINGTK  TODO  USAGE  acinclude.m4  aclocal.m4  config.h.in  config.sub  configure.in  lame.spec
src/lame/Dll/: BladeMP3EncDLL.c  CMakeLists.txt  Example.cpp  Makefile.in  Makefile.mingw32
src/lame/doc/: Makefile.in
src/lame/doc/html/: Makefile.am  Makefile.in  detailed.html  history.html  links.html  usage.html
src/lame/doc/man/: Makefile.am  Makefile.in  lame.1
src/lame/include/: Makefile.in  lame.def  lame.h  lame_platform.h  libmp3lame.sym
src/lame/libmp3lame/: Makefile.am  Makefile.in  fft.c  machine.h  util.h
src/lame/libmp3lame/i386/: Makefile.am  Makefile.in
src/lame/libmp3lame/vector/: Makefile.in  xmm_quantize_sub.c
src/lame/mpglib/: Makefile.in  common.c  interface.c  layer1.c  layer2.c  layer3.c  tabinit.c
